--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,17 +21,21 @@ dev_dependencies:
   build_runner: ^2.1.7
   flutter_test:
     sdk: flutter
+  icons_launcher: ^1.1.8
   json_serializable: ^6.2.0
   lint: ^1.8.2
   retrofit_generator: '>=4.0.0 <5.0.0'
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/general/the_movie_db_logo.png"
+
 flutter:
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/general/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
