--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_rating_bar: ^4.0.1
   flutter_svg: ^0.23.0+1
   get_it: ^7.2.0
   retrofit: '>=3.0.0 <4.0.0'
