--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   flutter_svg: ^0.23.0+1
   get_it: ^7.2.0
+  json_annotation: ^4.5.0
   retrofit: '>=3.0.0 <4.0.0'
 
 dev_dependencies:
