--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_svg: ^0.23.0+1
   get_it: ^7.2.0
   json_annotation: ^4.5.0
+  provider: ^6.0.3
   retrofit: '>=3.0.0 <4.0.0'
 
 dev_dependencies:
