--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   json_annotation: ^4.5.0
   provider: ^6.0.3
   retrofit: '>=3.0.0 <4.0.0'
+  shimmer: ^2.0.0
 
 dev_dependencies:
   build_runner: ^2.1.7
